Major Fixes & Retouching
-Fixed some bugs for the Additional Features (when New Game is triggered, hold is not visible anymore)
-Changed the Layout of Buttons in the Main Menu and in the Game as well.
-Added a Background Image to the Main Menu

--- a/src/main/resources/window_style.css
+++ b/src/main/resources/window_style.css
@@ -108,7 +108,7 @@
     -fx-font-size: 60px;
     -fx-font-weight: bold;
     -fx-text-fill: #00ff00;
-    -fx-effect: dropshadow(gaussian, #00ff00, 7, 0.9, 0, 0);
+    -fx-effect: dropshadow(gaussian, #00ff00, 4, 0.9, 0, 0);
 }
 
 .menuButton {
@@ -150,9 +150,9 @@
 }
 
 .mainMenuPanel {
-    -fx-background-image: url("background_image.png");
+    -fx-background-image: url("background2.png");
     -fx-background-size: cover;
-    -fx-background-position: center;
+    -fx-background-position: 0% center;
 }
 
 .gameOverBackground {
